--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Erik Paulson
 
 # Short bio or description (displayed in the header)
-description: Software Engineer/Opinionated Person
+description: Software Engineer - World Citizen
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://pbs.twimg.com/profile_images/866706884249747458/ZYaKI900_400x400.jpg
 
 #
 # Flags below are optional
@@ -73,7 +73,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
